# gims

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: crates.yml  rust.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/error/: error.rs  mod.rs
core/src/error/err/: message.rs
core/src/types/: mod.rs
gims/: Cargo.toml
gims/src/: lib.rs
